Name:                HAkismet
Version:             0.1
Synopsis:            Akismet spam protection library

License:             MIT
License-File:        LICENSE
Category:            Web
Author:              Oliver Mader <b52@reaktor42.de>, Nils Schweinsberg <mail@n-sch.de>
Maintainer:          Oliver Mader <b52@reaktor42.de>, Nils Schweinsberg <mail@n-sch.de>
Homepage:            http://reaktor42.de/projects/hakismet
Bug-Reports:         https://code.reaktor42.de/projects/hakismet

Build-type:          Simple
Cabal-version:       >= 1.8

Library

    GHC-Options: -Wall
    HS-Source-Dirs: src

    Build-depends:
        base == 4.*,
        network == 2.2.*,
        HTTP == 4000.*

    Exposed-Modules:
        Network.Akismet
